# Hellboy-Open-Source

./: LICENSE  README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  config.json  data.h  main.cpp  main.h  notes.md
app/src/main/cpp/Bootloader/: Avatar.cpp  Avatar.h  AvatarShout.cpp  AvatarShout.h  Bootloader.h  CheckpointBarn.cpp  CheckpointBarn.h  HttpClient.cpp  HttpClient.h  HttpClientRequestArgs.cpp  HttpClientRequestArgs.h
app/src/main/cpp/hellboy/: ChatBox.cpp  ChatBox.h  Configs.h  HellWidget.cpp  HellWidget.h  Hellboy.cpp  Hellboy.h  HellboyIO.cpp  HellboyIO.h  SkyIcons.h  SkySong.cpp  SkySong.h  coordinates.h  levels.h  spell_buff.h
app/src/main/cpp/include/: Vec2.h  Vec4.h
app/src/main/cpp/include/StbImage/: create_texture.cpp  create_texture.h
app/src/main/cpp/include/cipher/: Cipher.h
app/src/main/cpp/include/iconloader/: IconLoader.h
app/src/main/cpp/include/imgui/: imgui.h  imgui_impl_opengl3_loader.h  imgui_internal.h  imstb_textedit.h
app/src/main/cpp/include/misc/: Logger.h  fileselector.h
app/src/main/cpp/include/nlohmann/: json.hpp
app/src/main/cpp/memory/: AddressesBase.cpp  AddressesBase.h  HellAddress.cpp  HellAddress.h  HellPatch.cpp  HellPatch.h  SkyConst.cpp  SkyConst.h  hooks.cpp  hooks.h  memory.cpp  memory.h
app/src/main/cpp/memory/Live_Editor/: MemObserver.cpp  MemObserver.h
app/src/main/cpp/menu/: Avatars.cpp  ChangeLevel.cpp  Command.cpp  Debug.cpp  Farming.cpp  Inventory.cpp  Magic.cpp  Music.cpp  Settings.cpp  Styles.cpp  menu.h
